--- a/devops.html
+++ b/devops.html
@@ -70,7 +70,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qYS9VfwE&k=Job&j=orT09fwd&__jvst=Employee+Referral&__jvsd=sAVBYiwR&__jvsc=Twitter&bid=nbmOVLww'>Curriculum Associates Careers - Senior DevOps Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qYS9VfwE&k=Job&j=orT09fwd&__jvst=Employee+Referral&__jvsd=sAVBYiwR&__jvsc=Twitter&bid=nbmOVLww'>Curriculum Associates Careers - Senior DevOps Engineer</a></h5> 
 <p><span class="badge badge-light">Boston</span></p>
 <p>Posted on:: 2019-07-26</p>
 <hr/>
@@ -116,11 +116,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Jul 17, 2019 ... Apply online for the job of DevOps Engineer at Fetchr.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/burwood/job/oxHCafwK'>Burwood Group Careers - DevOps Architect</a></h5> 
+<h5><a href='https://jobs.jobvite.com/burwood/job/oxHCafwK'>Burwood Group Careers - DevOps Architect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ProgressiveTechnologySolutions1/743999692351060-sr-devops-engineer'>Progressive technology solutions Sr. DevOps Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/ProgressiveTechnologySolutions1/743999692351060-sr-devops-engineer'>Progressive technology solutions Sr. DevOps Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -134,15 +134,15 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/stratus/jobs/devops-engineer-czvluQRIur6zrIaKld2Sj6'>DevOps Engineer #0508 job at Stratus Solutions in Fulton, MD, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/stratus/jobs/devops-engineer-czvluQRIur6zrIaKld2Sj6'>DevOps Engineer #0508 job at Stratus Solutions in Fulton, MD, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/carproof/job/o8wAafw8'>CARFAX Canada Careers - DevOps Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/carproof/job/o8wAafw8'>CARFAX Canada Careers - DevOps Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://nezasa.join.com/jobs/268473-devops-engineer'>Job @ Nezasa (Lisbon): DevOps Engineer | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nezasa.join.com/jobs/268473-devops-engineer'>Job @ Nezasa (Lisbon): DevOps Engineer | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -175,7 +175,7 @@ published: 18.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Anitian/743999692312070-devops-engineer-cloud-automation-engineering-'>Anitian  DevOps Engineer (Cloud Automation Engineering) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Anitian/743999692312070-devops-engineer-cloud-automation-engineering-'>Anitian  DevOps Engineer (Cloud Automation Engineering) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -224,7 +224,7 @@ leading?...</p>
 <p><span class="badge badge-light">Barcelona</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Devoteam/743999692013375-ci-cd-automation-devops-consultant'>Devoteam CI/CD Automation  (DevOps) Consultant | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Devoteam/743999692013375-ci-cd-automation-devops-consultant'>Devoteam CI/CD Automation  (DevOps) Consultant | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Amsterdam</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -271,7 +271,7 @@ term?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/burwood/job/oxHCafwK'>Burwood Group Careers - DevOps Architect</a></h5> 
+<h5><a href='http://jobs.jobvite.com/burwood/job/oxHCafwK'>Burwood Group Careers - DevOps Architect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -337,7 +337,7 @@ term?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<h5><a href='https://talpasolutions.join.com/jobs/251744-devops-programmer-linux-php'>Job @ talpasolutions (Essen): DevOps Programmer (L... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://talpasolutions.join.com/jobs/251744-devops-programmer-linux-php'>Job @ talpasolutions (Essen): DevOps Programmer (L... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -383,7 +383,7 @@ America. Its first product, launched in 2014, is a no-fee credit card that is fu
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/swiggy/09d28ee4-a28a-4645-8400-51f3cbdc1bff'>Swiggy - Devops Engineer II</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/swiggy/09d28ee4-a28a-4645-8400-51f3cbdc1bff'>Swiggy - Devops Engineer II</a></h5> 
 <p><span class="badge badge-light">Bangalore</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
